--- a/Mini-Projects/IMDB Sentiment Analysis - XGBoost (Hyperparameter Tuning) - Solution.ipynb
+++ b/Mini-Projects/IMDB Sentiment Analysis - XGBoost (Hyperparameter Tuning) - Solution.ipynb
@@ -727,9 +727,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove ‘/bin’: Is a directory\n",
+      "rm: cannot remove ‘/boot’: Is a directory\n",
+      "rm: cannot remove ‘/cgroup’: Is a directory\n",
+      "rm: cannot remove ‘/dev’: Is a directory\n",
+      "rm: cannot remove ‘/etc’: Is a directory\n",
+      "rm: cannot remove ‘/home’: Is a directory\n",
+      "rm: cannot remove ‘/include’: Is a directory\n",
+      "rm: cannot remove ‘/lib’: Is a directory\n",
+      "rm: cannot remove ‘/lib64’: Is a directory\n",
+      "rm: cannot remove ‘/local’: Is a directory\n",
+      "rm: cannot remove ‘/lost+found’: Is a directory\n",
+      "rm: cannot remove ‘/media’: Is a directory\n",
+      "rm: cannot remove ‘/mnt’: Is a directory\n",
+      "rm: cannot remove ‘/opt’: Is a directory\n",
+      "rm: cannot remove ‘/proc’: Is a directory\n",
+      "rm: cannot remove ‘/root’: Is a directory\n",
+      "rm: cannot remove ‘/run’: Is a directory\n",
+      "rm: cannot remove ‘/sbin’: Is a directory\n",
+      "rm: cannot remove ‘/selinux’: Is a directory\n",
+      "rm: cannot remove ‘/srv’: Is a directory\n",
+      "rm: cannot remove ‘/sys’: Is a directory\n",
+      "rm: cannot remove ‘/tmp’: Is a directory\n",
+      "rm: cannot remove ‘/usr’: Is a directory\n",
+      "rm: cannot remove ‘/var’: Is a directory\n",
+      "rmdir: missing operand\n",
+      "Try 'rmdir --help' for more information.\n",
+      "rm: cannot remove ‘/bin’: Is a directory\n",
+      "rm: cannot remove ‘/boot’: Is a directory\n",
+      "rm: cannot remove ‘/cgroup’: Is a directory\n",
+      "rm: cannot remove ‘/dev’: Is a directory\n",
+      "rm: cannot remove ‘/etc’: Is a directory\n",
+      "rm: cannot remove ‘/home’: Is a directory\n",
+      "rm: cannot remove ‘/include’: Is a directory\n",
+      "rm: cannot remove ‘/lib’: Is a directory\n",
+      "rm: cannot remove ‘/lib64’: Is a directory\n",
+      "rm: cannot remove ‘/local’: Is a directory\n",
+      "rm: cannot remove ‘/lost+found’: Is a directory\n",
+      "rm: cannot remove ‘/media’: Is a directory\n",
+      "rm: cannot remove ‘/mnt’: Is a directory\n",
+      "rm: cannot remove ‘/opt’: Is a directory\n",
+      "rm: cannot remove ‘/proc’: Is a directory\n",
+      "rm: cannot remove ‘/root’: Is a directory\n",
+      "rm: cannot remove ‘/run’: Is a directory\n",
+      "rm: cannot remove ‘/sbin’: Is a directory\n",
+      "rm: cannot remove ‘/selinux’: Is a directory\n",
+      "rm: cannot remove ‘/srv’: Is a directory\n",
+      "rm: cannot remove ‘/sys’: Is a directory\n",
+      "rm: cannot remove ‘/tmp’: Is a directory\n",
+      "rm: cannot remove ‘/usr’: Is a directory\n",
+      "rm: cannot remove ‘/var’: Is a directory\n",
+      "rmdir: missing operand\n",
+      "Try 'rmdir --help' for more information.\n"
+     ]
+    }
+   ],
    "source": [
     "# First we will remove all of the files contained in the data_dir directory\n",
     "!rm $data_dir/*\n",
