--- a/Mini-Projects/IMDB Sentiment Analysis - XGBoost (Hyperparameter Tuning).ipynb
+++ b/Mini-Projects/IMDB Sentiment Analysis - XGBoost (Hyperparameter Tuning).ipynb
@@ -38,9 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘../data’: File exists\n",
+      "--2020-05-16 15:01:50--  http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+      "Resolving ai.stanford.edu (ai.stanford.edu)... 171.64.68.10\n",
+      "Connecting to ai.stanford.edu (ai.stanford.edu)|171.64.68.10|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 84125825 (80M) [application/x-gzip]\n",
+      "Saving to: ‘../data/aclImdb_v1.tar.gz’\n",
+      "\n",
+      "../data/aclImdb_v1. 100%[===================>]  80.23M  45.3MB/s    in 1.8s    \n",
+      "\n",
+      "2020-05-16 15:01:52 (45.3 MB/s) - ‘../data/aclImdb_v1.tar.gz’ saved [84125825/84125825]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%mkdir ../data\n",
     "!wget -O ../data/aclImdb_v1.tar.gz http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
@@ -58,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMDB reviews: train = 12500 pos / 12500 neg, test = 12500 pos / 12500 neg\n"
+     ]
+    }
+   ],
    "source": [
     "data, labels = read_imdb_data()\n",
     "print(\"IMDB reviews: train = {} pos / {} neg, test = {} pos / {} neg\".format(\n",
@@ -106,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMDb reviews (combined): train = 25000, test = 25000\n"
+     ]
+    }
+   ],
    "source": [
     "train_X, test_X, train_y, test_y = prepare_imdb_data(data, labels)\n",
     "print(\"IMDb reviews (combined): train = {}, test = {}\".format(len(train_X), len(test_X)))"
@@ -141,9 +176,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'First let me preface this post by saying that I am a fan of the original Star Wars MOVIES...I don\\'t read the books, play the games, wear the underwear or eat the cereal (if there is one). I am simply a fan of the films.<br /><br />With that being said, I struggle to see how people are giving this movie such high praise. Taking this movie by itself, and not comparing it to it\\'s terrible predecessors (EP 1, 2), I don\\'t understand how you can say this is an amazing movie. For all of the terrible shortcomings in the script - cheesy dialogue, contrived scenes (ie R2 suddenly being a badass, and long CGI intense chase scenes that have little human touch), HORRIBLE acting, and noted plot holes...how is this good? There was no real internal dilemma within Anakin; it just seemed like a switch was flipped and he was evil all of a sudden. I was not interested in the movie until the last 20 minutes or so (which by the way was ruined by the \"NOOOOOO!\" Frankenstein scene). When you BOMBARD the screen with intensely amazing CGI effects and fill in the gaps with absolutely atrocious one-liners when more could have and should have been said, this is NOT A GREAT MOVIE. For a film with such a \"dark\" tone, there was too much levity in the speech of ALL characters.<br /><br />I close with a question: From the beginning to the end of the film, was there really a sense of urgency and importance for what was actually about to take place?'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_X[100]"
    ]
@@ -159,9 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/ec2-user/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download(\"stopwords\")\n",
@@ -172,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,11 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import pdb\n",
     "\n",
     "cache_dir = os.path.join(\"../cache\", \"sentiment_analysis\")  # where to store cache files\n",
     "os.makedirs(cache_dir, exist_ok=True)  # ensure cache directory exists\n",
@@ -203,6 +260,7 @@
     "def preprocess_data(data_train, data_test, labels_train, labels_test,\n",
     "                    cache_dir=cache_dir, cache_file=\"preprocessed_data.pkl\"):\n",
     "    \"\"\"Convert each review to words; read from cache if available.\"\"\"\n",
+    "    print(\"Entering Preprocess\")\n",
     "\n",
     "    # If cache_file is not None, try to read from it first\n",
     "    cache_data = None\n",
@@ -216,6 +274,7 @@
     "    \n",
     "    # If cache is missing, then do the heavy lifting\n",
     "    if cache_data is None:\n",
+    "        print(\"Cache Data Not Exist - Creating Data\")\n",
     "        # Preprocess training and test data to obtain words for each review\n",
     "        #words_train = list(map(review_to_words, data_train))\n",
     "        #words_test = list(map(review_to_words, data_test))\n",
@@ -224,6 +283,7 @@
     "        \n",
     "        # Write to cache file for future runs\n",
     "        if cache_file is not None:\n",
+    "            print(\"Writing to Cache\")\n",
     "            cache_data = dict(words_train=words_train, words_test=words_test,\n",
     "                              labels_train=labels_train, labels_test=labels_test)\n",
     "            with open(os.path.join(cache_dir, cache_file), \"wb\") as f:\n",
@@ -239,12 +299,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entering Preprocess\n",
+      "Cache Data Not Exist - Creating Data\n",
+      "Writing to Cache\n",
+      "Wrote preprocessed data to cache file: preprocessed_data.pkl\n",
+      "Finished Preprocessing\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocess data\n",
-    "train_X, test_X, train_y, test_y = preprocess_data(train_X, test_X, train_y, test_y)"
+    "train_X, test_X, train_y, test_y = preprocess_data(train_X, test_X, train_y, test_y)\n",
+    "print(\"Finished Preprocessing\")"
    ]
   },
   {
@@ -258,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,9 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote features to cache file: bow_features.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract Bag of Words features for both training and test datasets\n",
     "train_X, test_X, vocabulary = extract_BoW_features(train_X, test_X)"
@@ -337,12 +418,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "val_X = pd.DataFrame(train_X[:10000])\n",
     "train_X = pd.DataFrame(train_X[10000:])\n",
     "\n",
@@ -364,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,13 +472,16 @@
     "# labels, instead we will use them later to compare with our model output.\n",
     "\n",
     "pd.concat([test_y, test_X], axis=1).to_csv(os.path.join(data_dir, 'test.csv'), header=False, index=False)\n",
+    "# Above way of doing this is wrong, for test data set, we dont want the ground truth. \n",
+    "pd.DataFrame(test_X).to_csv(os.path.join(data_dir,'validation.csv'), header=False, index=False)\n",
+    "\n",
     "pd.concat([val_y, val_X], axis=1).to_csv(os.path.join(data_dir, 'validation.csv'), header=False, index=False)\n",
     "pd.concat([train_y, train_X], axis=1).to_csv(os.path.join(data_dir, 'train.csv'), header=False, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,9 +547,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:There is a more up to date SageMaker XGBoost image. To use the newer image, please set 'repo_version'='0.90-1'. For example:\n",
+      "\tget_image_uri(region, 'xgboost', '0.90-1').\n"
+     ]
+    }
+   ],
    "source": [
     "# We need to retrieve the location of the container which is provided by Amazon for using XGBoost.\n",
     "# As a matter of convenience, the training and inference code both use the same container.\n",
@@ -469,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,9 +580,26 @@
     "\n",
     "xgb = None\n",
     "\n",
+    "xgb = sagemaker.estimator.Estimator(container, # The name of the training container\n",
+    "                                    role,      # The IAM role to use (our current role in this case)\n",
+    "                                    train_instance_count=1, # The number of instances to use for training\n",
+    "                                    train_instance_type='ml.m4.xlarge', # The type of instance ot use for training\n",
+    "                                    output_path='s3://{}/{}/output'.format(session.default_bucket(), prefix),\n",
+    "                                                                        # Where to save the output (the model artifacts)\n",
+    "                                    sagemaker_session=session) # The current SageMaker session)\n",
+    "\n",
     "# TODO: Set the XGBoost hyperparameters in the xgb object. Don't forget that in this case we have a binary\n",
     "#       label so we should be using the 'binary:logistic' objective.\n",
-    "\n"
+    "\n",
+    "xgb.set_hyperparameters(max_depth=5,\n",
+    "                        eta=0.2,\n",
+    "                        gamma=4,\n",
+    "                        min_child_weight=6,\n",
+    "                        subsample=0.8,\n",
+    "                        silent=0,\n",
+    "                        objective='binary:logistic',\n",
+    "                        early_stopping_rounds=10,\n",
+    "                        num_round=500)\n"
    ]
   },
   {
@@ -498,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,6 +625,19 @@
     "# TODO: Create the hyperparameter tuner object\n",
     "\n",
     "xgb_hyperparameter_tuner = None\n",
+    "\n",
+    "xgb_hyperparameter_tuner = HyperparameterTuner(estimator = xgb, # The estimator object to use as the basis for the training jobs.\n",
+    "                                               objective_metric_name = 'validation:rmse', # The metric used to compare trained models.\n",
+    "                                               objective_type = 'Minimize', # Whether we wish to minimize or maximize the metric.\n",
+    "                                               max_jobs = 9, # The total number of models to train\n",
+    "                                               max_parallel_jobs = 3, # The number of models to train in parallel\n",
+    "                                               hyperparameter_ranges = {\n",
+    "                                                    'max_depth': IntegerParameter(3, 12),\n",
+    "                                                    'eta'      : ContinuousParameter(0.05, 0.5),\n",
+    "                                                    'min_child_weight': IntegerParameter(2, 8),\n",
+    "                                                    'subsample': ContinuousParameter(0.5, 0.9),\n",
+    "                                                    'gamma': ContinuousParameter(0, 10),\n",
+    "                                               })\n",
     "\n"
    ]
   },
@@ -522,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,9 +678,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................!\n"
+     ]
+    }
+   ],
    "source": [
     "xgb_hyperparameter_tuner.wait()"
    ]
@@ -574,7 +712,9 @@
    "source": [
     "# TODO: Create a new estimator object attached to the best training job found during hyperparameter tuning\n",
     "\n",
-    "xgb_attached = None\n"
+    "xgb_attached = None\n",
+    "\n",
+    "xgb_attached = sagemaker.estimator.Estimator.attach(xgb_hyperparameter_tuner.best_training_job())\n"
    ]
   },
   {
@@ -593,7 +733,9 @@
     "# TODO: Create a transformer object from the attached estimator. Using an instance count of 1 and an instance type of ml.m4.xlarge\n",
     "#       should be more than enough.\n",
     "\n",
-    "xgb_transformer = None\n"
+    "xgb_transformer = None\n",
+    "\n",
+    "xgb_transformer = xgb_attached.transformer(instance_count = 1, instance_type = 'ml.m4.xlarge')"
    ]
   },
   {
@@ -609,7 +751,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Start the transform job. Make sure to specify the content type and the split type of the test data.\n"
+    "# TODO: Start the transform job. Make sure to specify the content type and the split type of the test data.\n",
+    "xgb_transformer.transform(test_location, content_type='text/csv', split_type='Line')"
    ]
   },
   {
@@ -682,9 +825,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove ‘/bin’: Is a directory\n",
+      "rm: cannot remove ‘/boot’: Is a directory\n",
+      "rm: cannot remove ‘/cgroup’: Is a directory\n",
+      "rm: cannot remove ‘/dev’: Is a directory\n",
+      "rm: cannot remove ‘/etc’: Is a directory\n",
+      "rm: cannot remove ‘/home’: Is a directory\n",
+      "rm: cannot remove ‘/include’: Is a directory\n",
+      "rm: cannot remove ‘/lib’: Is a directory\n",
+      "rm: cannot remove ‘/lib64’: Is a directory\n",
+      "rm: cannot remove ‘/local’: Is a directory\n",
+      "rm: cannot remove ‘/lost+found’: Is a directory\n",
+      "rm: cannot remove ‘/media’: Is a directory\n",
+      "rm: cannot remove ‘/mnt’: Is a directory\n",
+      "rm: cannot remove ‘/opt’: Is a directory\n",
+      "rm: cannot remove ‘/proc’: Is a directory\n",
+      "rm: cannot remove ‘/root’: Is a directory\n",
+      "rm: cannot remove ‘/run’: Is a directory\n",
+      "rm: cannot remove ‘/sbin’: Is a directory\n",
+      "rm: cannot remove ‘/selinux’: Is a directory\n",
+      "rm: cannot remove ‘/srv’: Is a directory\n",
+      "rm: cannot remove ‘/sys’: Is a directory\n",
+      "rm: cannot remove ‘/tmp’: Is a directory\n",
+      "rm: cannot remove ‘/usr’: Is a directory\n",
+      "rm: cannot remove ‘/var’: Is a directory\n",
+      "rmdir: missing operand\n",
+      "Try 'rmdir --help' for more information.\n",
+      "rm: cannot remove ‘/bin’: Is a directory\n",
+      "rm: cannot remove ‘/boot’: Is a directory\n",
+      "rm: cannot remove ‘/cgroup’: Is a directory\n",
+      "rm: cannot remove ‘/dev’: Is a directory\n",
+      "rm: cannot remove ‘/etc’: Is a directory\n",
+      "rm: cannot remove ‘/home’: Is a directory\n",
+      "rm: cannot remove ‘/include’: Is a directory\n",
+      "rm: cannot remove ‘/lib’: Is a directory\n",
+      "rm: cannot remove ‘/lib64’: Is a directory\n",
+      "rm: cannot remove ‘/local’: Is a directory\n",
+      "rm: cannot remove ‘/lost+found’: Is a directory\n",
+      "rm: cannot remove ‘/media’: Is a directory\n",
+      "rm: cannot remove ‘/mnt’: Is a directory\n",
+      "rm: cannot remove ‘/opt’: Is a directory\n",
+      "rm: cannot remove ‘/proc’: Is a directory\n",
+      "rm: cannot remove ‘/root’: Is a directory\n",
+      "rm: cannot remove ‘/run’: Is a directory\n",
+      "rm: cannot remove ‘/sbin’: Is a directory\n",
+      "rm: cannot remove ‘/selinux’: Is a directory\n",
+      "rm: cannot remove ‘/srv’: Is a directory\n",
+      "rm: cannot remove ‘/sys’: Is a directory\n",
+      "rm: cannot remove ‘/tmp’: Is a directory\n",
+      "rm: cannot remove ‘/usr’: Is a directory\n",
+      "rm: cannot remove ‘/var’: Is a directory\n",
+      "rmdir: missing operand\n",
+      "Try 'rmdir --help' for more information.\n"
+     ]
+    }
+   ],
    "source": [
     "# First we will remove all of the files contained in the data_dir directory\n",
     "!rm $data_dir/*\n",
