--- a/Mini-Projects/IMDB Sentiment Analysis - XGBoost (Updating a Model) - Solution.ipynb
+++ b/Mini-Projects/IMDB Sentiment Analysis - XGBoost (Updating a Model) - Solution.ipynb
@@ -42,7 +42,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘../data’: File exists\n",
+      "--2020-05-16 03:37:57--  http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+      "Resolving ai.stanford.edu (ai.stanford.edu)... 171.64.68.10\n",
+      "Connecting to ai.stanford.edu (ai.stanford.edu)|171.64.68.10|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 84125825 (80M) [application/x-gzip]\n",
+      "Saving to: ‘../data/aclImdb_v1.tar.gz’\n",
+      "\n",
+      "../data/aclImdb_v1. 100%[===================>]  80.23M  92.5MB/s    in 0.9s    \n",
+      "\n",
+      "2020-05-16 03:37:58 (92.5 MB/s) - ‘../data/aclImdb_v1.tar.gz’ saved [84125825/84125825]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%mkdir ../data\n",
     "!wget -O ../data/aclImdb_v1.tar.gz http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
